add feign client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8088
 server.context-path=/eureka-server
 
+spring.application.name=eureka-server
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 logging.level.com.netflix.eureka=OFF
